Change default appearance of surface plot. Change colour of hydrogens in animations: it was too faint agains a white background.

--- a/params.ini
+++ b/params.ini
@@ -26,7 +26,7 @@ lim=10
 ; Use this section to add atoms
 ; key = [mass, VdW, colour, name]
 ; 
-1=1.0   , 1.20, eeeeee, H
+1=1.0   , 1.20, cccccc, H
 2=19.0  , 1.47, ffdd00, F
 3=35.457, 1.75, 32d600, Cl
 4=2.0   , 1.20, c0c0c0, D
