--- a/params.ini
+++ b/params.ini
@@ -1,108 +1,110 @@
-;Author: Tristan Mackenzie
-;
-;    This file is part of LepsPy.
-;
-;    LepsPy is free software: you can redistribute it and/or modify
-;    it under the terms of the GNU General Public License as published by
-;    the Free Software Foundation, either version 3 of the License, or
-;    (at your option) any later version.
-;
-;    LepsPy is distributed in the hope that it will be useful,
-;    but WITHOUT ANY WARRANTY; without even the implied warranty of
-;    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;    GNU General Public License for more details.
-;
-;    You should have received a copy of the GNU General Public License
-;    along with LepsPy.  If not, see <http://www.gnu.org/licenses/>.
-;
+#Author: Tristan Mackenzie
+#
+#    This file is part of LepsPy.
+#
+#    LepsPy is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    LepsPy is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with LepsPy.  If not, see <http://www.gnu.org/licenses/>.
+
+# This file contains default options of the simulations, and parameters
+# for different atoms that can be simulated. To add new atoms, this is
+# the only file that needs to be edited.
+
 [defaults]
-; default values to use for Interactive
-; class
+# default values to use for Interactive
+# class
 dt= 0.005
-H=  0.424
+Hparam=  0.424
 lim=10
 
 [atoms]
-; Use this section to add atoms
-; key = [mass, VdW, colour, name]
-; 
-1=1.0   , 1.20, cccccc, H
-2=19.0  , 1.47, ffdd00, F
-3=35.457, 1.75, 32d600, Cl
-4=2.0   , 1.20, c0c0c0, D
-5=126.91, 1.98, de00a0, I
-6=16.0  , 1.52, ff0000, O
+# Use this section to add atoms
+# key = [mass, VdW, colour]
+H=1.0   , 1.20, cccccc
+F=19.0  , 1.47, ffdd00
+Cl=35.457, 1.75, 32d600
+D=2.0   , 1.20, c0c0c0
+I=126.91, 1.98, de00a0
+O=16.0  , 1.52, ff0000
 
 [isotopes]
-; Use this section to set isotopes that 
-; have the same parameters but different
-; masses
-4=1
+# Use this section to set isotopes that have the
+# same potential parameters but different masses
+D=H
 
 [morse]
-; Two-body Morse Parameters
-; Dr12 : Dissociation energy of 1 and 2
-; lr12 : Equilibrium bond-length
-; Brab : Morse Parameter
-;  Dr12 , lr12, Br12
-11=104.0, 0.74, 1.99 ; H - H
-12=134.0, 0.92, 2.27 ; H - F
-21=134.0, 0.92, 2.27 ; F - H
-13=106.5, 1.28, 1.85 ; H - Cl
-31=106.5, 1.28, 1.85 ; Cl- H
-22=36.0 , 1.42, 1.60 ; F - F
-23=498.0, 1.63, 2.12 ; F - Cl
-32=498.0, 1.63, 2.12 ; Cl- F
-33=58.0 , 1.99, 2.03 ; Cl- Cl
-15=74.0 , 1.60, 1.75 ; H - I
-51=74.0 , 1.60, 1.75 ; I - H
-55=36.0 , 2.67, 1.85 ; I - I
-16=102.0, 0.96, 2.26 ; H - O
-61=102.0, 0.96, 2.26 ; O - H
-66=53.0 , 1.32, 2.32 ; O - O
+# Two-body Morse Parameters
+# Dr12 : Dissociation energy of 1 and 2
+# Brab : Morse Parameter
+# lr12 : Equilibrium bond-length
+#     Dr12 , Br12, lr12
+HH=   104.0, 1.99, 0.74
+HF=   134.0, 2.27, 0.92
+FH=   134.0, 2.27, 0.92
+HCl=  106.5, 1.85, 1.28
+ClH=  106.5, 1.85, 1.28
+FF=   36.0 , 1.60, 1.42
+FCl=  498.0, 2.12, 1.63
+ClF=  498.0, 2.12, 1.63
+ClCl= 58.0 , 2.03, 1.99
+HI=   74.0 , 1.75, 1.60
+IH=   74.0 , 1.75, 1.60
+II=   36.0 , 1.85, 2.67
+HO=   102.0, 2.26, 0.96
+OH=   102.0, 2.26, 0.96
+OO=   53.0 , 2.32, 1.32
     
 [limits]
-; Plot limits
-;   mina, maxa, minb, maxb
-111=0.40, 2.50, 0.40, 2.50 ; H - H - H
-112=0.40, 2.50, 0.50, 2.50 ; H - H - F
-211=0.50, 2.50, 0.40, 2.50 ; F - H - H
-121=0.55, 3.50, 0.55, 3.50 ; H - F - F
-221=0.80, 3.50, 0.50, 4.00 ; F - F - H
-122=0.50, 4.00, 0.80, 3.50 ; H - F - F
-222=0.95, 4.00, 0.95, 4.00 ; F - F - F
-311=0.90, 4.00, 0.35, 3.50 ; Cl- H - H
-113=0.35, 3.50, 0.90, 4.00 ; H - H - Cl
-131=0.85, 3.50, 0.85, 3.50 ; H - Cl- H
-133=0.80, 3.50, 1.60, 4.50 ; H - Cl- Cl
-331=1.60, 4.50, 0.80, 3.50 ; Cl- Cl- H
-313=0.90, 4.50, 0.90, 4.50 ; Cl- H - Cl
-223=0.60, 3.50, 1.20, 5.50 ; F - F - Cl 
-322=1.20, 5.50, 0.60, 5.50 ; Cl- F - F
-212=0.55, 3.50, 0.55, 3.50 ; F - H - F
-232=1.30, 4.50, 1.30, 4.50 ; F - Cl- F
-332=1.45, 3.50, 1.20, 4.50 ; Cl- Cl- F
-233=1.20, 4.50, 1.45, 3.50 ; F - Cl- Cl
-323=1.30, 3.50, 1.30, 3.50 ; Cl- F - Cl
-333=1.60, 4.60, 1.60, 4.60 ; Cl- Cl- Cl
-123=0.60, 3.00, 1.30, 4.50 ; H - F - Cl
-321=1.30, 4.50, 0.60, 3.00 ; Cl- F - H
-213=0.50, 3.50, 0.75, 3.50 ; F - H - Cl
-312=0.75, 3.50, 0.50, 3.50 ; Cl- H - F
-132=0.80, 3.50, 1.30, 4.50 ; H - Cl- F
-231=1.30, 4.50, 0.80, 3.50 ; F - Cl- H
-115=0.40, 4.50, 1.20, 4.50 ; H - H - I
-511=1.20, 4.50, 0.40, 4.50 ; I - H - H
-151=1.20, 4.50, 1.20, 4.50 ; H - I - H
-155=1.20, 4.00, 2.30, 5.00 ; H - I - I 
-551=2.30, 5.00, 1.20, 4.00 ; I - I - H
-515=1.20, 4.00, 1.20, 4.00 ; I - H - I
-555=2.30, 5.50, 2.30, 5.50 ; I - I - I
-116=0.40, 3.50, 0.65, 3.50 ; H - H - O
-611=0.65, 3.50, 0.40, 3.50 ; O - H - H
-161=0.65, 3.50, 0.65, 3.50 ; H - O - H
-166=1.00, 3.50, 0.65, 3.50 ; H - O - O
-661=1.00, 3.50, 0.65, 3.50 ; O - O - H
-616=0.65, 3.50, 0.65, 3.50 ; O - H - O
-666=1.00, 3.50, 1.00, 3.50 ; O - H - O
+# Plot limits
+#   mina, maxa, minb, maxb
+HHH=0.40, 2.50, 0.40, 2.50
+HHF=0.40, 2.50, 0.50, 2.50
+FHH=0.50, 2.50, 0.40, 2.50
+HFH=0.55, 3.50, 0.55, 3.50
+FFH=0.80, 3.50, 0.50, 4.00
+HFF=0.50, 4.00, 0.80, 3.50
+FHF=0.55, 3.50, 0.55, 3.50
+FFF=0.95, 4.00, 0.95, 4.00
+ClHH=0.90, 4.00, 0.35, 3.50
+HHCl=0.35, 3.50, 0.90, 4.00
+HClH=0.85, 3.50, 0.85, 3.50
+HClCl=0.80, 3.50, 1.60, 4.50
+ClClH=1.60, 4.50, 0.80, 3.50
+ClHCl=0.90, 4.50, 0.90, 4.50
+FFCl=0.60, 3.50, 1.20, 5.50 
+ClFF=1.20, 5.50, 0.60, 5.50
+FClF=1.30, 4.50, 1.30, 4.50
+ClClF=1.45, 3.50, 1.20, 4.50
+FClCl=1.20, 4.50, 1.45, 3.50
+ClFCl=1.30, 3.50, 1.30, 3.50
+ClClCl=1.60, 4.60, 1.60, 4.60
+HFCl=0.60, 3.00, 1.30, 4.50
+ClFH=1.30, 4.50, 0.60, 3.00
+FHCl=0.50, 3.50, 0.75, 3.50
+ClHF=0.75, 3.50, 0.50, 3.50
+HClF=0.80, 3.50, 1.30, 4.50
+FClH=1.30, 4.50, 0.80, 3.50
+HHI=0.40, 4.50, 1.20, 4.50
+IHH=1.20, 4.50, 0.40, 4.50
+HIH=1.20, 4.50, 1.20, 4.50
+HII=1.20, 4.00, 2.30, 5.00
+IIH=2.30, 5.00, 1.20, 4.00
+IHI=1.20, 4.00, 1.20, 4.00
+III=2.30, 5.50, 2.30, 5.50
+HHO=0.40, 3.50, 0.65, 3.50
+OHH=0.65, 3.50, 0.40, 3.50
+HOH=0.65, 3.50, 0.65, 3.50
+HOO=1.00, 3.50, 0.65, 3.50
+OOH=1.00, 3.50, 0.65, 3.50
+OHO=0.65, 3.50, 0.65, 3.50
+OOO=1.00, 3.50, 1.00, 3.50
 
