--- a/params.ini
+++ b/params.ini
@@ -20,9 +20,9 @@
 # the only file that needs to be edited.
 
 [defaults]
-# default values to use for Interactive
-# class
-Hparam=  0.424
+# default values to use for Interactive class
+# Sato parameter for the potential: 0.18 is the original value JCP 23:2465 (1955)
+sato=  0.18
 
 [atoms]
 # Use this section to add atoms
