Change of units to kJ.mol^{-1} and pm, which makes the time units fs. Some changes to GUI.

--- a/params.ini
+++ b/params.ini
@@ -26,13 +26,13 @@ sato=  0.18
 
 [atoms]
 # Use this section to add atoms
-# key = [mass, VdW, colour]
-H=1.0   , 1.20, cccccc
-D=2.0   , 1.20, c0c0c0
-F=19.0  , 1.47, ffdd00
-Cl=35.457, 1.75, 32d600
-I=126.91, 1.98, de00a0
-O=16.0  , 1.52, ff0000
+# key = [mass/g.mol^{-1}, VdW/pm, colour]
+H=1.0   , 120, cccccc
+D=2.0   , 120, c0c0c0
+F=19.0  , 147, ffdd00
+Cl=35.457, 175, 32d600
+I=126.91, 198, de00a0
+O=16.0  , 152, ff0000
 
 [isotopes]
 # Use this section to set isotopes that have the
@@ -41,68 +41,68 @@ D=H
 
 [morse]
 # Two-body Morse Parameters
-# Dr12 : Dissociation energy of 1 and 2
-# Brab : Morse Parameter
-# lr12 : Equilibrium bond-length
+# Dr12 : Dissociation energy (in kJ.mol^{-1})
+# Brab : Morse Parameter (in pm^{-1})
+# lr12 : Equilibrium bond-length (in pm)
 #     Dr12 , Br12, lr12
-HH=   104.0, 1.99, 0.74
-HF=   134.0, 2.27, 0.92
-FH=   134.0, 2.27, 0.92
-HCl=  106.5, 1.85, 1.28
-ClH=  106.5, 1.85, 1.28
-FF=   36.0 , 1.60, 1.42
-FCl=  498.0, 2.12, 1.63
-ClF=  498.0, 2.12, 1.63
-ClCl= 58.0 , 2.03, 1.99
-HI=   74.0 , 1.75, 1.60
-IH=   74.0 , 1.75, 1.60
-II=   36.0 , 1.85, 2.67
-HO=   102.0, 2.26, 0.96
-OH=   102.0, 2.26, 0.96
-OO=   53.0 , 2.32, 1.32
+HH=   435.1, 0.0199, 74
+HF=   560.7, 0.0227, 92
+FH=   560.7, 0.0227, 92
+HCl=  445.6, 0.0185, 128
+ClH=  445.6, 0.0185, 128
+FF=   150.6, 0.0160, 142
+FCl=  2083.6, 0.0212, 163
+ClF=  2083.6, 0.0212, 163
+ClCl= 242.7, 0.0203, 199
+HI=   309.6, 0.0175, 160
+IH=   309.6, 0.0175, 160
+II=   150.6, 0.0185, 267
+HO=   426.8, 0.0226, 96
+OH=   426.8, 0.0226, 96
+OO=   221.8, 0.0232, 132
     
 [limits]
-# Plot limits
+# Plot limits (in pm)
 #   mina, maxa, minb, maxb
-HHH=0.40, 2.50, 0.40, 2.50
-HHF=0.40, 2.50, 0.50, 2.50
-FHH=0.50, 2.50, 0.40, 2.50
-HFH=0.55, 3.50, 0.55, 3.50
-FFH=0.80, 3.50, 0.50, 4.00
-HFF=0.50, 4.00, 0.80, 3.50
-FHF=0.55, 3.50, 0.55, 3.50
-FFF=0.95, 4.00, 0.95, 4.00
-ClHH=0.90, 4.00, 0.35, 3.50
-HHCl=0.35, 3.50, 0.90, 4.00
-HClH=0.85, 3.50, 0.85, 3.50
-HClCl=0.80, 3.50, 1.60, 4.50
-ClClH=1.60, 4.50, 0.80, 3.50
-ClHCl=0.90, 4.50, 0.90, 4.50
-FFCl=0.60, 3.50, 1.20, 5.50 
-ClFF=1.20, 5.50, 0.60, 5.50
-FClF=1.30, 4.50, 1.30, 4.50
-ClClF=1.45, 3.50, 1.20, 4.50
-FClCl=1.20, 4.50, 1.45, 3.50
-ClFCl=1.30, 3.50, 1.30, 3.50
-ClClCl=1.60, 4.60, 1.60, 4.60
-HFCl=0.60, 3.00, 1.30, 4.50
-ClFH=1.30, 4.50, 0.60, 3.00
-FHCl=0.50, 3.50, 0.75, 3.50
-ClHF=0.75, 3.50, 0.50, 3.50
-HClF=0.80, 3.50, 1.30, 4.50
-FClH=1.30, 4.50, 0.80, 3.50
-HHI=0.40, 4.50, 1.20, 4.50
-IHH=1.20, 4.50, 0.40, 4.50
-HIH=1.20, 4.50, 1.20, 4.50
-HII=1.20, 4.00, 2.30, 5.00
-IIH=2.30, 5.00, 1.20, 4.00
-IHI=1.20, 4.00, 1.20, 4.00
-III=2.30, 5.50, 2.30, 5.50
-HHO=0.40, 3.50, 0.65, 3.50
-OHH=0.65, 3.50, 0.40, 3.50
-HOH=0.65, 3.50, 0.65, 3.50
-HOO=1.00, 3.50, 0.65, 3.50
-OOH=1.00, 3.50, 0.65, 3.50
-OHO=0.65, 3.50, 0.65, 3.50
-OOO=1.00, 3.50, 1.00, 3.50
+HHH=40, 250, 40, 250
+HHF=40, 250, 50, 250
+FHH=50, 250, 40, 250
+HFH=55, 350, 55, 350
+FFH=80, 350, 50, 400
+HFF=50, 400, 80, 350
+FHF=55, 350, 55, 350
+FFF=95, 400, 95, 400
+ClHH=90, 400, 35, 350
+HHCl=35, 350, 90, 400
+HClH=85, 350, 85, 350
+HClCl=80, 350, 160, 450
+ClClH=160, 450, 80, 350
+ClHCl=90, 450, 90, 450
+FFCl=60, 350, 120, 550 
+ClFF=120, 550, 60, 550
+FClF=130, 450, 130, 450
+ClClF=145, 350, 120, 450
+FClCl=120, 450, 145, 350
+ClFCl=130, 350, 130, 350
+ClClCl=160, 460, 160, 460
+HFCl=60, 300, 130, 450
+ClFH=130, 450, 60, 300
+FHCl=50, 350, 75, 350
+ClHF=75, 350, 50, 350
+HClF=80, 350, 130, 450
+FClH=130, 450, 80, 350
+HHI=40, 450, 120, 450
+IHH=120, 450, 40, 450
+HIH=120, 450, 120, 450
+HII=120, 400, 230, 500
+IIH=230, 500, 120, 400
+IHI=120, 400, 120, 400
+III=230, 550, 230, 550
+HHO=40, 350, 65, 350
+OHH=65, 350, 40, 350
+HOH=65, 350, 65, 350
+HOO=100, 350, 65, 350
+OOH=100, 350, 65, 350
+OHO=65, 350, 65, 350
+OOO=100, 350, 100, 350
 
